fixed book show feature

--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,11 @@ body {
 	display: grid;
 	grid-template-columns: 2fr 8fr
 }
+
+html {
+	background-color: lightblue;
+}
+
+header{
+	background-color: lightgreen;
+}
